update java version to 17 and dependencies libs