@@ -11,11 +11,11 @@ buildscript {
 
 plugins {
     id 'base'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'org.springframework.boot' version '2.7.1' apply false
+    id 'io.spring.dependency-management' version '1.1.5'
+    id 'org.springframework.boot' version '3.3.0' apply false
     id "com.github.node-gradle.node" version "3.3.0" apply false
-    id "com.webcohesion.enunciate" version "2.15.0" apply false
-    id "io.freefair.lombok" version "5.3.3.3" apply false
+    id "com.webcohesion.enunciate" version "2.17.0" apply false
+    id "io.freefair.lombok" version "8.6" apply false
 
     id 'com.github.jk1.dependency-license-report' version '1.16'
     id "com.github.hierynomus.license-report" version "0.15.0"
@@ -30,6 +30,11 @@ ext {
             main   : 'src/main/docker/Dockerfile'
             //openjdk : 'src/main/docker/openjdk/Dockerfile',
     ]
+    defaultJvmArgs =
+            ["-Dfile.encoding=UTF-8",
+             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+             "--add-opens=java.base/java.lang=ALL-UNNAMED",
+             "--add-opens=java.base/java.time=ALL-UNNAMED"]
 }
 
 def javaProjects = subprojects.findAll { project -> project.subprojects.empty }
@@ -79,22 +84,11 @@ configure(javaProjects) {
         }
     }
 
-    dependencyManagement {
-        imports {
-            // Keeps netty-related dependencies consistent
-            mavenBom 'io.netty:netty-bom:4.1.68.Final'
-        }
-    }
-
-
     configurations.all {
         resolutionStrategy {
             // Disable this line on case of version conflict and then run :dependency task OR execute build with --scan option
             failOnVersionConflict()
         }
-
-        // same api defined in javax.annotation-api-*
-        exclude group: 'jakarta.annotation', module: 'jakarta.annotation-api' // GNU license
     }
 
     dependencyCheck {
@@ -108,15 +102,17 @@ configure(javaProjects) {
     }
 
     compileJava.options.encoding = 'UTF-8'
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    compileJava.options.compilerArgs.add("-parameters")
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
     // Defines versions of dependencies to be used by subprojects
     // https://github.com/spring-gradle-plugins/dependency-management-plugin#dependency-management-dsl
     dependencyManagement {
 
         imports {
-            mavenBom 'com.fasterxml.jackson:jackson-bom:2.13.5'
-            mavenBom 'io.netty:netty-bom:4.1.109.Final'
+            mavenBom "com.fasterxml.jackson:jackson-bom:$jacksonVersion"
+            mavenBom "io.netty:netty-bom:$nettyVersion"
+            mavenBom 'org.junit:junit-bom:5.11.4'
         }
 
         dependencies {
@@ -156,7 +152,8 @@ configure(javaProjects) {
             //dependency 'deltix:deltix-spring-api-keys:0.1.4'
 
             // spring boot tests
-            dependency 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+            dependency 'junit:junit:4.13.2'
+
             dependency 'com.nimbusds:oauth2-oidc-sdk:9.43.4'
             dependency 'com.nimbusds:nimbus-jose-jwt:9.37.3'
 
@@ -165,7 +162,7 @@ configure(javaProjects) {
 
             // resolving conflicts
             dependency 'com.squareup.okhttp3:okhttp:3.3.1'
-            dependency 'net.minidev:json-smart:2.4.11'
+            dependency 'net.minidev:json-smart:2.5.2'
 
             dependency 'commons-logging:commons-logging:1.2'
             dependency 'commons-cli:commons-cli:1.4'
@@ -181,10 +178,11 @@ configure(javaProjects) {
             dependency 'org.apache.commons:commons-lang3:3.7'
             dependency 'org.apache.commons:commons-math3:3.6'
             dependency 'org.apache.commons:commons-text:1.10.0'
+            dependency 'org.hamcrest:hamcrest:2.2'
+            dependency 'net.bytebuddy:byte-buddy:1.15.4'
 
-            dependency 'com.fasterxml.jackson:jackson-bom:2.13.5'
 
-            dependencySet(group: 'com.fasterxml.jackson.core', version: '2.13.5') {
+            dependencySet(group: 'com.fasterxml.jackson.core', version: "$jacksonVersion") {
                 entry 'jackson-databind'
                 entry 'jackson-core'
                 entry 'jackson-annotations'
@@ -195,20 +193,21 @@ configure(javaProjects) {
             dependency 'net.java.dev.jna:jna-platform:5.6.0' // azure sdk requires jna 5.6.0
             dependency 'com.microsoft.azure:msal4j:1.15.1'
 
-            dependency 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
-            dependency 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.5'
+            dependency "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+            dependency "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion"
 
-            dependency 'io.micrometer:micrometer-registry-prometheus:1.9.1'
-            dependency 'io.micrometer:micrometer-core:1.9.1'
-
-            dependencySet(group: 'org.bouncycastle', version: '1.70') {
-                entry 'bcpkix-jdk15on'
-                entry 'bcprov-jdk15on'
-                entry 'bcmail-jdk15on'
-                entry 'bcprov-ext-jdk15on'
+            dependencySet(group: 'io.micrometer', version: '1.14.4') {
+                entry 'micrometer-core'
+                entry 'micrometer-observation'
+                entry 'micrometer-registry-prometheus'
             }
 
-            dependencySet(group: 'org.springframework', version: '5.3.39') {
+            dependencySet(group: 'org.bouncycastle', version: '1.80') {
+                entry 'bcpkix-jdk18on'
+                entry 'bcprov-jdk18on'
+            }
+
+            dependencySet(group: 'org.springframework', version: "$springVersion") {
                 entry 'spring-beans'
                 entry 'spring-jcl'
                 entry 'spring-core'
@@ -223,9 +222,8 @@ configure(javaProjects) {
                 entry 'spring-websocket'
             }
 
-            //dependency 'org.springframework.boot:spring-boot-starter-test:2.7.1'
 
-            dependencySet(group: 'org.springframework.boot', version: '2.7.18') {
+            dependencySet(group: 'org.springframework.boot', version: "$springBootVersion") {
                 entry 'spring-boot'
                 entry 'spring-boot-autoconfigure'
                 entry 'spring-boot-configuration-processor'
@@ -238,13 +236,13 @@ configure(javaProjects) {
                 entry 'spring-boot-starter-test'
             }
 
-            dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.90') {
+            dependencySet(group: 'org.apache.tomcat.embed', version: "$tomcatVersion") {
                 entry 'tomcat-embed-core'
                 entry 'tomcat-embed-websocket'
                 entry 'tomcat-embed-el'
             }
 
-            dependencySet(group: 'org.springframework.security', version: '5.7.13') {
+            dependencySet(group: 'org.springframework.security', version: "$springSecurityVersion") {
                 entry 'spring-security-web'
                 entry 'spring-security-messaging'
                 entry 'spring-security-core'
@@ -255,23 +253,22 @@ configure(javaProjects) {
                 entry 'spring-security-oauth2-jose'
             }
 
-            dependency 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
+            dependency 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE' // todo remove
+            dependency "org.springframework.security:spring-security-oauth2-authorization-server:1.4.2"
             dependency 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+            dependency 'com.nimbusds:nimbus-jose-jwt:9.47'
 
-            dependency 'org.testcontainers:testcontainers:1.16.2'
-            dependency 'org.testcontainers:junit-jupiter:1.16.2'
+            dependency 'org.testcontainers:testcontainers:1.19.8'
+            dependency 'org.testcontainers:junit-jupiter:1.19.8'
 
-            dependency 'javax.annotation:javax.annotation-api:1.3.2'
             dependency 'org.jetbrains:annotations:20.1.0'
 
             dependency 'org.reflections:reflections:0.9.11'
-            dependency 'org.asynchttpclient:async-http-client:2.10.4'
-
-            dependency 'junit:junit:4.13.1'
+            dependency 'org.asynchttpclient:async-http-client:2.12.4'
 
             dependency 'io.reactivex.rxjava2:rxjava:2.1.14'
 
-            dependency 'net.java.dev.jna:jna:5.8.0'
+            dependency 'net.java.dev.jna:jna:5.13.0'
 
             dependency 'org.yaml:snakeyaml:2.0'
 
@@ -279,7 +276,7 @@ configure(javaProjects) {
 
             dependency 'org.reactivestreams:reactive-streams:1.0.4'
 
-            dependencySet(group: 'io.netty', version: '4.1.115.Final') {
+            dependencySet(group: 'io.netty', version: "$nettyVersion") {
                 entry 'netty-codec'
                 entry 'netty-codec-http'
                 entry 'netty-handler'
@@ -317,11 +314,11 @@ configure(javaProjects) {
 
     test {
         ignoreFailures Boolean.getBoolean("test.ignoreFailures")
-        reports.junitXml.enabled = true
+        reports.junitXml.required = true
 
         doLast {
             copy {
-                from reports.junitXml.getDestination() include {"*.xml"}
+                from reports.junitXml.getOutputLocation() include {"*.xml"}
                 into file("$rootDir/build/reports/tests/xml")
             }
         }
